<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/bottomNavContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <LinearLayout
        android:id="@+id/bottomNavContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/nav_device_info"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_nav_item_background"
            android:gravity="center"
            android:text="@string/device_info_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nav_system_update"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_nav_item_background"
            android:gravity="center"
            android:text="@string/system_update_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nav_mcu_update"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_nav_item_background"
            android:gravity="center"
            android:text="@string/mcu_update_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nav_system_app"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_nav_item_background"
            android:gravity="center"
            android:text="@string/system_app_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>